--- a/angular.json
+++ b/angular.json
@@ -11,8 +11,11 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
+            "customWebpackConfig": {
+              "path":"src/custom-webpack.config.ts"
+            },
             "outputPath": "dist/angular_app_amplify",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -57,7 +60,7 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular-builders/custom-webpack:dev-server",
           "configurations": {
             "production": {
               "browserTarget": "angular_app_amplify:build:production"
@@ -94,5 +97,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "03276a4e-8fdd-4b61-93c1-945a3fbdf36d"
   }
 }
